# yuheng-adminextract

./: .gitignore  README.md  pyproject.toml
assets/: localization.json
src/: __main__.py  adminextract.py  localization.py  prune.py  transform.py
src/yuheng_plugin/yuheng_admininspect/: __init__.py  __main__.py
src/yuheng_plugin/yuheng_admininspect/method/: __init__.py  localization.py  prune.py  transform.py
